Project

General

Profile

Actions

Bug #21878

closed

bluefs: os/bluestore/BlueFS.cc: 1505: FAILED assert(h->file->fnode.ino != 1)

Added by Sage Weil over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
Correctness/Safety
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2017-10-20 10:52:21.317 7fc1ec51f700 -1 /build/ceph-13.0.0-2133-gdfc596f/src/os/bluestore/BlueFS.cc: In function 'int BlueFS::_flush_range(BlueFS::FileWriter*, uint64_t, uint64_t)' thread 7fc1ec51f700 time 2017-10-20 10:52:21.311746
/build/ceph-13.0.0-2133-gdfc596f/src/os/bluestore/BlueFS.cc: 1505: FAILED assert(h->file->fnode.ino != 1)

 ceph version 13.0.0-2133-gdfc596f (dfc596fb9f646b3293bfe3f0e3344b4e659427a0) mimic (dev)
 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x10e) [0x7fc1f8d3374e]
 2: (BlueFS::_flush_range(BlueFS::FileWriter*, unsigned long, unsigned long)+0x1eb9) [0x7fc1f8cb7ba9]
 3: (BlueFS::_flush(BlueFS::FileWriter*, bool)+0x160) [0x7fc1f8cb7dc0]
 4: (BlueFS::_flush_and_sync_log(std::unique_lock<std::mutex>&, unsigned long, unsigned long)+0x760) [0x7fc1f8cb8990]
 5: (BlueFS::_fsync(BlueFS::FileWriter*, std::unique_lock<std::mutex>&)+0x271) [0x7fc1f8cba281]
 6: (BlueRocksWritableFile::Sync()+0x4f) [0x7fc1f8cd217f]
 7: (rocksdb::WritableFileWriter::SyncInternal(bool)+0x175) [0x7fc1f910f9d5]
 8: (rocksdb::WritableFileWriter::Sync(bool)+0x106) [0x7fc1f9111ab6]
 9: (rocksdb::SyncManifest(rocksdb::Env*, rocksdb::ImmutableDBOptions const*, rocksdb::WritableFileWriter*)+0xd4) [0x7fc1f9115624]
 10: (rocksdb::VersionSet::LogAndApply(rocksdb::ColumnFamilyData*, rocksdb::MutableCFOptions const&, rocksdb::autovector<rocksdb::VersionEdit*, 8ul> const&, rocksdb::InstrumentedMutex*, rocksdb::Directory*, bool, rocksdb::ColumnFamilyOptions const*)+0x1781) [0x7fc1f908c7b1]
 11: (rocksdb::MemTableList::InstallMemtableFlushResults(rocksdb::ColumnFamilyData*, rocksdb::MutableCFOptions const&, rocksdb::autovector<rocksdb::MemTable*, 8ul> const&, rocksdb::VersionSet*, rocksdb::InstrumentedMutex*, unsigned long, rocksdb::autovector<rocksdb::MemTable*, 8ul>*, rocksdb::Directory*, rocksdb::LogBuffer*)+0x3b4) [0x7fc1f9060fb4]
 12: (rocksdb::FlushJob::Run(rocksdb::FileMetaData*)+0xd95) [0x7fc1f9048025]
 13: (rocksdb::DBImpl::FlushMemTableToOutputFile(rocksdb::ColumnFamilyData*, rocksdb::MutableCFOptions const&, bool*, rocksdb::JobContext*, rocksdb::LogBuffer*)+0x5b6) [0x7fc1f900d2e6]
 14: (rocksdb::DBImpl::BackgroundFlush(bool*, rocksdb::JobContext*, rocksdb::LogBuffer*)+0x38a) [0x7fc1f900dd7a]
 15: (rocksdb::DBImpl::BackgroundCallFlush()+0x33c) [0x7fc1f90130bc]
 16: (rocksdb::DBImpl::BGWorkFlush(void*)+0x71) [0x7fc1f9013591]
 17: (rocksdb::ThreadPoolImpl::Impl::BGThread(unsigned long)+0x271) [0x7fc1f917dfc1]
 18: (rocksdb::ThreadPoolImpl::Impl::BGThreadWrapper(void*)+0x3d) [0x7fc1f917e1ad]
 19: (()+0xb1a60) [0x7fc1f631aa60]
 20: (()+0x8184) [0x7fc1f6992184]

/a/sage-2017-10-20_02:18:36-rados-wip-osd-heartbeats-distro-basic-smithi/1752406

Related issues 1 (0 open1 closed)

Related to bluestore - Bug #21257: bluestore: BlueFS.cc: 1255: FAILED assert(!log_file->fnode.extents.empty())Duplicate09/06/2017

Actions
Actions #1

Updated by Sage Weil over 6 years ago

  • Status changed from In Progress to Fix Under Review
  • Backport set to luminous
Actions #2

Updated by Sage Weil over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Sage Weil over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions #4

Updated by Sage Weil over 6 years ago

  • Related to Bug #21257: bluestore: BlueFS.cc: 1255: FAILED assert(!log_file->fnode.extents.empty()) added
Actions

Also available in: Atom PDF